objects/GGO_Case_SLA_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>AccountType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGO_Diagnosis__c</fullName>
        <label>GGO Diagnosis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGO_SLA__c</fullName>
        <label>GGO SLA(Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityType__c</fullName>
        <label>SeverityType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>GGO Case SLA Matrix</label>
</CustomObject>